--- a/style.css
+++ b/style.css
@@ -1,39 +1,39 @@
 body{
+    width: 100%;
+    height: 100dvh;
+    background: #5c5c5c;
+    margin: 0;
+    padding: 0;
     display: grid;
     place-items: center;
-    background: #5c5c5c;
-    height: 100dvh;
-    overflow: hidden;
 }
 #toggle{
     display: none;
 }
 label{
     padding: 4em 10em;
-    border: 0.1em solid #fff;
-    border-radius: 5em;
-    transition: .5s all ease-in;
-    position: relative;
+    border-radius: 200px;
     background-image: url(day.png);
-    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
-    box-shadow: 7px 15px 35px 0px rgba(0,0,0,0.75);
+    background-position: center;
+    position: relative;
+    transition: .5s ease;
+    box-shadow: 7px 15px 35px 0px rgba(0,0,0,0.75)
 }
-label::before{
-    content: '';
+.circle{
+    position: absolute;
     padding: 3.5em;
+    cursor: pointer;
     background: #fff;
     border-radius: 50%;
-    position: absolute;
-    left: 2%;
-    top: 50%;
-    transform: translateY(-50%);
+    left: 3%;
+    transform: translate(0, -50%);
     transition: .5s ease;
-    cursor: pointer;
 }
-#toggle:checked ~ label::before{
-    left: 97%;
-    transform: translate(-98%, -50%);
+#toggle:checked ~ label .circle{
+    left: 96%;
+    transform: translate(-97%, -50%);
 }
 #toggle:checked ~ label{
     background-image: url(night.png);
